--- a/src/main/resources/templates/merleg/merlegjegy.html
+++ b/src/main/resources/templates/merleg/merlegjegy.html
@@ -412,59 +412,59 @@
 												    <tr>
 												      <th scope="row">I. Osztályú</th>
 												      <td>
-												      	<input type="text" class="form-control" id="elsoOsztEgysegAr" name="elsoOsztEgysegAr" required>
+												      	<input type="text" class="form-control " id="elsoOsztEgysegAr" name="elsoOsztEgysegAr" required>
 												      </td>
 												      <td>
-								    					<input type="text" class="form-control" id="elsoOsztBruttoSuly"  required>
+								    					<input type="text" class="form-control suly" id="elsoOsztBruttoSuly"  required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="elsoOsztLevonas" value="5" name="elsoOsztLevonas" required>
+												      	<input type="text" class="form-control levonas" id="elsoOsztLevonas" value="5" name="elsoOsztLevonas" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="elsoOsztalyNettoSuly" name="elsoOsztalySuly" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark  suly" id="elsoOsztalyNettoSuly" name="elsoOsztalySuly" readonly>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="elsoOsztalyErteke" name="elsoOsztalyErteke" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg" id="elsoOsztalyErteke" name="elsoOsztalyErteke" readonly>
 												      	
 												      </td>
 												    </tr>
 												    <tr>
 												      <th scope="row">II. Osztályú</th>
 												      <td>
-												      	<input type="text" class="form-control" id="masodOsztEgysegAr" name="masodOsztEgysegAr" required>
+												      	<input type="text" class="form-control egysegar" id="masodOsztEgysegAr" name="masodOsztEgysegAr" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="masodOsztBruttoSuly" required>
+												      	<input type="text" class="form-control suly" id="masodOsztBruttoSuly" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="masodOsztLevonas" value="5" name="masodOsztLevonas" required>
+												      	<input type="text" class="form-control levonas" id="masodOsztLevonas" value="5" name="masodOsztLevonas" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent  text-dark" id="masodOsztalyNettoSuly" name="masodOsztalySuly" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent  text-dark suly " id="masodOsztalyNettoSuly" name="masodOsztalySuly" readonly>
 												      	 
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="masodOsztalyErteke" name="masodOsztalyErteke" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg" id="masodOsztalyErteke" name="masodOsztalyErteke" readonly>
 												      	
 												      </td>
 												    </tr>
 												    <tr>
 												      <th scope="row">III. Osztályú</th>
 												      <td>
-												      	<input type="text" class="form-control" id="harmadOsztEgysegAr" name="harmadOsztEgysegAr" required>
+												      	<input type="text" class="form-control egysegar" id="harmadOsztEgysegAr" name="harmadOsztEgysegAr" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="harmadOsztBruttoSuly" required>
+												      	<input type="text" class="form-control suly" id="harmadOsztBruttoSuly" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="harmadOsztLevonas" value="5" name="harmadOsztLevonas" required>
+												      	<input type="text" class="form-control levonas" id="harmadOsztLevonas" value="5" name="harmadOsztLevonas" required>
 												      </td>
 												      <td>
-												        <input type="text" class="form-control border-0 fw-bold bg-transparent  text-dark" id="harmadOsztalyNettoSuly" name="harmadOsztalySuly" readonly>
+												        <input type="text" class="form-control border-0 fw-bold bg-transparent  text-dark  suly" id="harmadOsztalyNettoSuly" name="harmadOsztalySuly" readonly>
 												      	
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="harmadOsztalyErteke" name="harmadOsztalyErteke" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg" id="harmadOsztalyErteke" name="harmadOsztalyErteke" readonly>
 												      	
 												      </td>
 												      
@@ -472,60 +472,60 @@
 												    <tr>
 												      <th scope="row">IV. Osztályú</th>
 												      <td>
-												      	<input type="text" class="form-control" id="negyedOsztEgysegAr" name="negyedOsztEgysegAr" required>
+												      	<input type="text" class="form-control egysegar" id="negyedOsztEgysegAr" name="negyedOsztEgysegAr" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="negyedOsztBruttoSuly" required>
+												      	<input type="text" class="form-control suly" id="negyedOsztBruttoSuly" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="negyedOsztLevonas" value="5" name="negyedOsztLevonas" required>
+												      	<input type="text" class="form-control levonas" id="negyedOsztLevonas" value="5" name="negyedOsztLevonas" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent  text-dark" id="negyedOsztalyNettoSuly" name="negyedOsztalySuly" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent  text-dark  suly" id="negyedOsztalyNettoSuly" name="negyedOsztalySuly" readonly>
 												      	
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="negyedOsztalyErteke" name="negyedOsztalyErteke" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg" id="negyedOsztalyErteke" name="negyedOsztalyErteke" readonly>
 												      	
 												      </td>
 												    </tr>
 												    <tr>
 												      <th scope="row">Gyökér</th>
 												      <td>
-												      	<input type="text" class="form-control" id="vastagEgysegAr" name="vastagEgysegAr" required>
+												      	<input type="text" class="form-control egysegar" id="vastagEgysegAr" name="vastagEgysegAr" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="vastagBruttoSuly" required>
+												      	<input type="text" class="form-control suly" id="vastagBruttoSuly" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="vastagLevonas" value="5" name="vastagLevonas" required>
+												      	<input type="text" class="form-control levonas" id="vastagLevonas" value="5" name="vastagLevonas" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent  text-dark" id="vastagNettoSuly" name="vastagGyokerSuly" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent  text-dark  suly" id="vastagNettoSuly" name="vastagGyokerSuly" readonly>
 												      	
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="vastagErteke" name="vastagErteke" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg" id="vastagErteke" name="vastagErteke" readonly>
 												      	
 												      </td>
 												    </tr>
 												    <tr>
 												      <th scope="row">Ipari</th>
 												      <td>
-												      	<input type="text" class="form-control" id="vekonyEgysegAr" name="vekonyEgysegAr" required>
+												      	<input type="text" class="form-control egysegar" id="vekonyEgysegAr" name="vekonyEgysegAr" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="vekonyBruttoSuly" required>
+												      	<input type="text" class="form-control suly" id="vekonyBruttoSuly" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control" id="vekonyLevonas" value="5" name="vekonyLevonas" required>
+												      	<input type="text" class="form-control levonas" id="vekonyLevonas" value="5" name="vekonyLevonas" required>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="vekonyNettoSuly" name="vekonyGyokerSuly" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark  suly" id="vekonyNettoSuly" name="vekonyGyokerSuly" readonly>
 												      	
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="vekonyErteke" name="vekonyErteke" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg" id="vekonyErteke" name="vekonyErteke" readonly>
 												      	
 												      </td>
 												    </tr>
@@ -533,10 +533,10 @@
 												      <th scope="row" colspan="4">Összesen:</th>
 												      <td>
 												      	
-												      	<p id="osszSuly"></p>
+												      	<p  id="osszSuly"></p>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark" id="osszAr" name="osszAr" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg" id="osszAr" name="osszAr" readonly>
 												      	
 												      </td>
 												    </tr>
@@ -546,7 +546,7 @@
 												      	<p>Előleg:</p>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark"  id="eloleg" name="eloleg">
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg"  id="eloleg" name="eloleg" value="0">
 												      	
 												      </td>
 												      
@@ -557,7 +557,7 @@
 												      	<p class="fw-bold">Kifizetendő:</p>
 												      </td>
 												      <td>
-												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark"  id="fizetendő" name="kifizetendo" readonly>
+												      	<input type="text" class="form-control border-0 fw-bold bg-transparent text-dark inputMask osszeg"  id="fizetendő" name="kifizetendo" readonly>
 												      	
 												      </td>
 												      
@@ -570,7 +570,7 @@
 										  			<p>Leadás dátuma: </p>
 										  		</div>
 										  		<div class="col-sm-6 col-lg-6">
-										  			<p id="leadasDatum"></p>
+										  			<input type="date" class="form-control" id="leadasDatum" min="1920-01-01" max="2040-01-01"  name="leadasDatum" required>
 										  		</div>
 										  </div>
 										  
@@ -593,6 +593,7 @@
 							 
 						    </div>
 						  </div>
+				    	</div>
 				    </form>
 			 </div>
 					
