--- a/src/main/resources/templates/felvasarlas/felvasarlasijegy.html
+++ b/src/main/resources/templates/felvasarlas/felvasarlasijegy.html
@@ -9,93 +9,100 @@
 		
 	<div layout:fragment="content">
 	
-		<div class="container" >
-			<div class="row justify-content-center ">
+		<div class="container">
+						<div class="container-fluid">
+								<div class="card shadow mb-4">
+								<div class="card-header row">
+								
+									<div class=" py-3 col">
+		                            	<h3 class="m-0 font-weight-bold text-primary">Új felvásárlásijegy készítése</h3>
+		                        	</div>
+		                        	<div class="col-md-auto">
+		                        	
+		                        	</div>
+									
+								
+								</div>
+		                        
+		                        <div class="card-body">
+		                        
+		                        	<form name="ujFelvasarlasiJegy" th:action="@{savefelvasarlasijegy}"  method="POST">
+		                        		<div class="row">
+					                        <div class="col-10">
+					                        	<select class="form-select"  id="termeloSelect" th:name="id">
+												  <option th:each="termelok : ${termelo}" 
+												          th:value="${termelok.id}" 
+												          th:text="${termelok.nev}"
+												          >Wireframe</option>
+												</select>
+					                        
+					                        </div>
+					                        
+					                        <div class="col-2">
+					                        	<button type="submit" class="btn btn-primary">
+					                        		Új felvásárlási jegy
+					                        	</button>
+					                        </div>
+			                        
+			                        	</div>
+		                        	
+		                        	</form>
+			                        
+		                        
+		                           
+		                        </div>
+		                    </div>
+						
+						
+								<div class="card shadow mb-4">
+								<div class="card-header row">
+								
+									<div class=" py-3 col">
+		                            	<h3 class="m-0 font-weight-bold text-primary">Kifizetett felvásárlási jegy lista</h3>
+		                        	</div>
+		                        	<div class="col-md-auto">
+		                        	
+		                        	</div>
+									
+								
+								</div>
+		                        
+		                        <div class="card-body">
+		                            <div class="table-responsive">
+		                                <table class="table table-bordered table-striped" id="felvasarlasiJegyFizetve" style="width:100%">
+		                                    <thead>
+		                                        <tr>
+		                                        	<th></th>
+		                                            <th>#</th>
+		                                            <th>Név</th>
+		                                            <th>Dátum</th>
+		                                            <th>Össz Ár</th>
+		                                            
+		                                            
+		                                        </tr>
+		                                    </thead>
+		                                    <tfoot>
+		                                        <tr>
+		                                        	<th></th>
+		                                            <th>#</th>
+		                                            <th>Név</th>
+		                                            <th>Dátum</th>
+		                                            <th>Össz Ár</th>
+		                                            
+		                                            
+		                                        </tr>
+		                                    </tfoot>
+		                                    
+		                                </table>
+		                            </div>
+		                        </div>
+		                    </div>
+						</div>
+					</div>
+					
 				
-				<div class="form-group row justify-content-center">
-    				<label for="merlegjegy" class="col-sm-2 col-form-label font-weight-bold mt-2 mb-2">Mérlegjegyek keresése</label>
-    				<div class="col-sm-6 col-md-6">
-      				<input type="text" id="merlegjegySearch" name="keyword" class="form-control border border-secondary rounded mt-2 mb-2">
-    				</div>
-  				</div>
-				<div class="col-sm-10 col-md-10 " id="overflow">
-					
-					
-					
-					<table class="table table-striped table-hover border border-secondary" id="filteredMerlegjegyTable">
-						<thead>
-							<tr class="table-dark">
-								<th scope="col"></th>
-								<th scope="col">#</th>
-								<th scope="col">Időpont</th>
-								<th scope="col">Név</th>
-								<th scope="col">Összeg (ft)</th>
-								<th scope="col"></th>
-							</tr>
-						</thead>
-						<tbody th:each="merlegjegy, item : ${merlegjegyek}">
-							<tr  class="table-light">
-								<td >
-									<a class="" data-bs-toggle="collapse" th:href="'#row'+${item.index}" role="button" aria-expanded="false" th:attr="aria-controls='row'+${item.index}">
-								    <span class="material-icons">
-									expand_more
-									</span>
-									</a>
-								  </td>
-								<td sope="row" th:text="${merlegjegy.id}" class="fw-bold"> 1</td>
-								<td th:text="${merlegjegy.leadasDatum}" class="fw-bold">2020-01-15</td>
-								<td th:text="${merlegjegy.tNev}" class="fw-bold">Kónya Sándor</td>
-								<td th:text="${merlegjegy.osszAr}" class="fw-bold">652220</td>
-								<td><input class="form-check-input" type="checkbox" value="" th:id="'checkBox' + ${item.index}"></td>
-							</tr>
-							<tr class="hide-table-padding "  >
-								<td></td>
-								<td colspan="3">
-									<div th:id="'row'+${item.index}" class="collapse p-3" >
-										<div class="row m-0">
-											<div class="col-4 fw-bold">I. osztály súly: </div>
-											<div class="col-6 fw-light" th:text="${merlegjegy.elsoOsztalySuly}">1</div>
-										</div>
-										<hr class="m-0">
-										<div class="row m-0">
-											<div class="col-4 fw-bold">II. osztály súly: </div>
-											<div class="col-6 fw-light" th:text="${merlegjegy.masodOsztalySuly}">1</div>
-										</div>
-										<hr class="m-0">
-										<div class="row">
-											<div class="col-4 fw-bold">III. osztály súly: </div>
-											<div class="col-6 fw-light" th:text="${merlegjegy.harmadOsztalySuly}">1</div>
-										</div>
-										<hr class="m-0">
-										<div class="row">
-											<div class="col-4 fw-bold">IV. osztály súly: </div>
-											<div class="col-6 fw-light" th:text="${merlegjegy.negyedOsztalySuly}">1</div>
-										</div>
-										<hr class="m-0">
-										<div class="row">
-											<div class="col-4 fw-bold">Vastag gyökér súly: </div>
-											<div class="col-6 fw-light" th:text="${merlegjegy.vastagGyokerSuly}">1</div>
-										</div>
-										<hr class="m-0">
-										<div class="row">
-											<div class="col-4 fw-bold">Vékony gyökér súly: </div>
-											<div class="col-6 fw-light" th:text="${merlegjegy.vekonyGyokerSuly}">1</div>
-										</div>
-									</div>
-								</td>
-								<td></td>
-								<td></td> 
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			
-				<div class="d-grid gap-2 d-md-flex justify-content-md-end">
-  					<button class="btn btn-primary me-md-2 m-3" type="button" id="sumButton">Összead</button>
-					
-				</div>
-			</div>
-		</div>
+				
+				
 	
 	</div>
 	
