--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -22,6 +22,9 @@
 	<!-- Custom CSS-->
 	<link rel="stylesheet" th:href="@{/css/custom.css}" href="../../css/custom.css" >
 	
+	<!-- select2 -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2-bootstrap-5-theme@1.1.1/dist/select2-bootstrap-5-theme.min.css" />
 	
 	
 </head>
@@ -38,22 +41,27 @@
 			    <div class="collapse navbar-collapse" id="navbarNav">
 			      <ul class="navbar-nav">
 			      	<li class="nav-item dropdown">
-			          <a class="nav-link dropdown-toggle  text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			          <a class="nav-link dropdown-toggle" href="#" id="navbarMerlegjegyek" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 			            Mérlegjegyek
 			          </a>
-			          <ul class="dropdown-menu bg-primary" aria-labelledby="navbarDropdown">
-			            <li><a class="dropdown-item text-light" href="/merleg/merlegjegy">Új Termelő mérlegjegy</a></li>
-			            <li><a class="dropdown-item text-light" href="/merleg/vevomerlegjegy">Új Vevő mérlegjegy</a></li>
-			            <li><hr class="dropdown-divider"></li>
-			            <li><a class="dropdown-item text-light" href="/merleg/merlegjegylista">Mérlegjegy lekérdezések</a></li>
+			          <ul class="dropdown-menu bg-primary text-secondary" aria-labelledby="navbarMerlegjegyek">
+			            <li><a class="dropdown-item text-secondary" href="/merleg/merlegjegy">Új Termelő mérlegjegy</a></li>
+			            <li><a class="dropdown-item text-secondary" href="/merleg/vevomerlegjegy">Új Vevő mérlegjegy</a></li>
+
 			          </ul>
 			        </li>
 			        
 			        <li class="nav-item">
 			          <a class="nav-link text-light" href="/felvasarlas/felvasarlasijegy">Felvásárlási jegyek</a>
 			        </li>
-			        <li class="nav-item">
-			          <a class="nav-link text-light" href="/egyedilekerdezesek">Egyedi lekérdezések</a>
+			        <li class="nav-item dropdown">
+			          <a class="nav-link dropdown-toggle text-light" href="#" id="navbarlekerdezesek" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			          Egyedi lekérdezések</a>
+			          <ul class="dropdown-menu bg-primary" aria-labelledby="navbarlekerdezesek">
+			            <li><a class="dropdown-item text-light" href="#">Termelő mérlegjegy</a></li>
+			            <li><a class="dropdown-item text-light" href="/merleg/vevomerlegjegylista">Vevő mérlegjegy</a></li>
+			            <li><a class="dropdown-item text-light" href="/merleg/merlegjegylista">Mérlegjegy lekérdezések</a></li>
+			          </ul>
 			        </li>
 			        <li class="nav-item">
 			          <a class="nav-link text-light" href="/uj/ugyfel">Ügyfelek szerkesztése</a>
@@ -108,6 +116,9 @@
     
     <!-- jquery mask -->
     <script th:src="@{/js/mask/dist/jquery.inputmask.js}" src="../../js/mask/dist/jquery.inputmask.js"></script>
+    
+    <!--  select -->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 	
 </body>
 </html>
