--- a/src/main/resources/templates/uj/ugyfelek.html
+++ b/src/main/resources/templates/uj/ugyfelek.html
@@ -72,7 +72,7 @@
 			</div>
 			
 			<div class="myForm">
-					<form th:action="@{/savetermelo}" method="post">
+					<form th:action="@{/edittermelo}" method="post">
 						<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="editUSerLabel" aria-hidden="true">
 						  <div class="modal-dialog modal-dialog-scrollable" role="document">
 						    <div class="modal-content">
